docs(configuration): update docs

--- a/extensions/configuration/docs/00.concept.md
+++ b/extensions/configuration/docs/00.concept.md
@@ -5,11 +5,10 @@
 Distributed System Configuration (**Configuration**) is a set of static[^1] parameters for all algorithms within a given
 system.
 
-**Component Configuration** is a subset of Configuration for algorithms within a component.
-
 **Context Configuration** is a set of values that overrides default values for configuration of components added to a
-given
-context.
+given context.
+
+**Component Configuration** is a subset of Configuration for algorithms within a component.
 
 ## Responsibility segregation
 
