--- a/extensions/configuration/docs/01.solution.md
+++ b/extensions/configuration/docs/01.solution.md
@@ -21,7 +21,7 @@
 
 ## Context
 
-Component configuration is available as a context extension
+Component configuration is available as an operation context extension.
 
 Usage:
 
@@ -35,13 +35,16 @@ context.configuration('foo')
 ## Secrets deployment
 
 <dl>
-<dt><code>toa conceal</code></dt>
+
+<dt><code>$ toa conceal</code></dt>
 <dd>Finds all secrets declared in a context, prompts values for those which hasn't been deployed yet and 
 deploys those keys with provided values.
 
 <code>--reset</code> don't skip deployed secrets</dd>
-<dt><code>toa conceal key value</code></dt>
+
+<dt><code>$ toa conceal key value</code></dt>
 <dd>Checks if a given <code>key</code> is a declared secret and deploys it with a given <code>value</code></dd>
+
 </dl>
 
 
